--- a/sample_config.env
+++ b/sample_config.env
@@ -3,11 +3,11 @@
 
 #________COMPULSORY____________#
 
-TG_BOT_TOKEN = ""  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-APP_ID = 
-API_HASH = ""
-OWNER_ID = 
-AUTH_CHANNEL = "" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
+TG_BOT_TOKEN = "7029383019:AAGmgfEwT17E-w9wkbhHAiJF1aHrEKLxMfk"  # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
+APP_ID = 13384432
+API_HASH = "ea9db4503ed7088b788e06dfd818e00e"
+OWNER_ID = 6169288210
+AUTH_CHANNEL = "-1002205938557" #Add IDs separated by a SPACE (Like :: -10012503747 -10012586941 539295917)
 
 
 #________NOT COMPULSORY____________#
